# ImageProcessor

./: CMakeLists.txt  application.h  base_filter.cpp  base_filter.h  bmp.h  crop.cpp  edge_detection.cpp  edge_detection.h  factory.cpp  factory.h  filters.h  gaussian_blur.h  image_processor.cpp  negative.h  parse.h  readme.md  sharpening.cpp  utils.cpp  utils.h
src/core/: application.cpp  bmp.cpp  matrix.cpp  matrix.h  parse.cpp  pipeline.cpp  pipeline.h
src/filters/: compress.cpp  compress.h  crop.h  gaussian_blur.cpp  grayscale.cpp  grayscale.h  negative.cpp  sharpening.h
